icon alignment fix.

--- a/Public/styles/app.css
+++ b/Public/styles/app.css
@@ -83,6 +83,10 @@ a { color: var(--blue); text-decoration: none; }
   border-radius: 4px;
   transition: background 0.5s;
   color: var(--grey);
+  display: flex;
+  align-content: center;
+  justify-cnotent: center;
+  flex-wrap: wrap;
 }
 .navInner a:hover {
   background:  var(--lightGrey);
